fixed uneven height in other work slider cards

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -53,7 +53,7 @@ $enable-responsive-font-sizes: true;
 // enable equal height for cards
 $card-height: 100vh;
 // project details header background
-$project-details-bg-color: rgba(255,251,237,0);
+$project-details-bg-color: #ffffda;
 
 
 
